RESOLVED FIXED287946
REGRESSION(290596@main): Address the new smart pointer warning in WebPageProxy
https://bugs.webkit.org/show_bug.cgi?id=287946
Summary REGRESSION(290596@main): Address the new smart pointer warning in WebPageProxy
Ryosuke Niwa
Reported 2025-02-19 00:04:45 PST
Address the static analyzer warning introduced by 290596@main.
Attachments
Ryosuke Niwa
Comment 1 2025-02-19 00:06:38 PST
EWS
Comment 2 2025-02-19 00:38:51 PST
Committed 290600@main (5077911b9f90): <https://commits.webkit.org/290600@main> Reviewed commits have been landed. Closing PR #40839 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-19 00:39:16 PST
Note You need to log in before you can comment on or make changes to this bug.