REGRESSION(290596@main): Address the new smart pointer warning in WebPageProxy https://bugs.webkit.org/show_bug.cgi?id=287946

Reviewed by Aditya Keerthi.

Fixed the new static analyzer warning introduced in 290596@main.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::createNewPage):

Canonical link: https://commits.webkit.org/290600@main